--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+    
+    <div>
     <header>
     <div class="logoContainer">
         <div class="logo"><img src="images/logo-01.png"></div>
@@ -22,6 +24,7 @@
         </div>
     </div>
     </header>
+    </div>
 
     <!--  About Me section and My Skills section coded using CSS flex -->
 
