--- a/index2.html
+++ b/index2.html
@@ -22,10 +22,10 @@
                 <div>
                     <div>
                         <ul>
-                            <li><a href="#">work</a></li>
-                            <li><a href="#">about</a></li>
-                            <li><a href="#">résumé</a></li>
-                            <li><a href="#">contact</a></li>
+                            <li><a href="index.html" class="menuActive">work</a></li>
+                            <li><a href="about.html">about</a></li>
+                            <li><a href="resume.html">résumé</a></li>
+                            <li><a href="contact.html">contact</a></li>
                         </ul>
                     </div>
                 </div>
