Added JS UI interaction

--- a/about.html
+++ b/about.html
@@ -15,6 +15,22 @@
     <div class="logoContainer">
         <div class="logo"><img src="images/logo-01.png"></div>
     </div>
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="index.html" class="menuActive">work</a></li>
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="resume.html">résumé</a></li>
+                        <li><a href="contact.html">contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="navbarContainer">
         <div class="navbar">
             <a href="index.html">work</a>
