--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_18/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -22,8 +22,8 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="index.html" class="menuActive">work</a></li>
-                        <li><a href="about.html">about</a></li>
+                        <li><a href="index.html">work</a></li>
+                        <li><a href="about.html"><span class="menuActive">about</span></a></li>
                         <li><a href="resume.html">résumé</a></li>
                         <li><a href="contact.html">contact</a></li>
                     </ul>
