--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_18/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
     </head>
     <body>
@@ -15,6 +15,7 @@
         <div class="logoContainer">
             <div class="logo fadeIn1"><img src="images/logo-01.png"></div>
         </div>
+
         <div class="menu-wrap fadeIn4">
             <input type="checkbox" class="toggler">
             <div class="hamburger"><div></div></div>
@@ -22,7 +23,7 @@
                 <div>
                     <div>
                         <ul>
-                            <li><a href="index.html" class="menuActive">work</a></li>
+                            <li><a href="index.html" class="menuActive"><span class="menuActive">work</span></a></li>
                             <li><a href="about.html">about</a></li>
                             <li><a href="resume.html">résumé</a></li>
                             <li><a href="contact.html">contact</a></li>
@@ -31,6 +32,7 @@
                 </div>
             </div>
         </div>
+
         <div class="navbarContainer">
             <div class="navbar">
                 <a href="#" class="activeNav fadeIn2">work</a>
