--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div>
                     <div>
                         <ul>
-                            <li><a href="index.html" class="menuActive"><span class="menuActive">work</span></a></li>
+                            <li><a href="index.html"><span class="menuActive">work</span></a></li>
                             <li><a href="about.html">about</a></li>
                             <li><a href="resume.html">résumé</a></li>
                             <li><a href="contact.html">contact</a></li>
