--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Ross Enger Design Portfolio</title>
         <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
+        <style>
+            @import url("https://use.typekit.net/oqf7lfy.css");
+        </style>
     </head>
     <body>
 
