--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang ="en">
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
         <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
-        <style>
-            @import url("https://use.typekit.net/oqf7lfy.css");
-        </style>
     </head>
     <body>
 
