--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
+        <script>
+            ScrollReveal({ reset: true });
+        </script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
         <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
@@ -69,7 +73,7 @@
 
     <section class="projectSection">
     <div class="projectGridContainer">
-        <div class="npoCard">
+        <div class="npoCard load-hidden">
             <img src="./images/npo_homepage_images.png" class="npoImages">
             <div class="projectCardContainer">
                 <h2 class ="projectCardHeader">White Bear Area Food Shelf Website Redesign</h2>
@@ -77,7 +81,7 @@
             <P class="projectCardSubhead">UI Case Study</P>
             <button class="projectButton">View Project</button>
         </div>
-        <div class="blmCard">
+        <div class="blmCard load-hidden">
             <img src="./images/blm_homepage_images.png" class="blmImages">
             <div class="projectCardContainer">
                 <h2 class ="projectCardHeader">Bureau of Land Management Website Redesign</h2>
@@ -85,7 +89,7 @@
             <P class="projectCardSubhead">UI Case Study</P>
             <button class="projectButton">View Project</button>
         </div>
-        <div class="goalAssistantCard">
+        <div class="goalAssistantCard load-hidden">
             <img src="./images/goalassistant_homepage_image.png" class="goalAssistantImage">
             <div class="projectCardContainer">
                 <h2 class ="projectCardHeader">GoalAssistant Mobile App</h2>
@@ -93,7 +97,7 @@
             <P class="projectCardSubhead">UX Case Study</P>
             <button class="projectButton">View Project</button>
         </div>
-        <div class="trvlCard">
+        <div class="trvlCard load-hidden">
             <img src="./images/trvl_homepage_image.png" class="trvlImage">
             <div class="projectCardContainer">
                 <h2 class ="projectCardHeader">Travel Startup Mobile App</h2>
