--- a/about.html
+++ b/about.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
+        <script>
+            ScrollReveal({ reset: true });
+        </script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
         <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body>
+    <body class="easeTransition">
     
     <div>
     <header>
@@ -48,8 +52,8 @@
 
     <section class ="aboutMeSection">
         <div class="aboutMeContainer">
-            <div id ="aboutMePicture" class="fadeIn1"></div>
-            <div id="aboutMeDescription" class="fadeIn1">
+            <div id ="aboutMePicture"></div>
+            <div id="aboutMeDescription">
                 <p>As a UX/UI designer, I am passionate about crafting intuitive, visually stunning, and user-centered digital experiences. With a background in graphic design and technology, I am dedicated to creating products that are not only aesthetically pleasing, but also functional. I treat design as a visual language that, when used fluently, eloquently communicates with users and solves problems with purpose.</p>
                 <p class="aboutMeParagraphBold" >I’m eager to contribute to and grow with an ambitious and dynamic team that’s committed to pushing the creative envelope and build exceptional user experiences.</p>
                 <p>Design serves as a practical way to channel the creative process, however I also love creating art. As a hobby, I enjoy applying my interest in geometry to creating 3D wall art and have creative goals centered around using CAD and generative processing techniques while leveraging the precision of 3D printing and CNC routers to design and build lights. I have recently begun working with wood and LED lights and look forward to working with more materials such as resin, metal, ceramic, and concrete.</p>
@@ -58,7 +62,8 @@
         <div id="graphicDesignPortfolioContainer" class="fadeIn2">
             <a href="https://rossenger.myportfolio.com/" id ="portfolioLink"><button id="graphicDesignPortfolio">View Graphic Design Portfolio</button></a>
         </div>
-        <section class="skillsSection">
+    </section>
+    <section class="skillsSection">
         <div id="skillsTitleContainer">
             <h2 class="skillsHeader">Skills</h2>
         </div>
@@ -79,7 +84,8 @@
                 <p class="skillsDescription">Problem solving • Adaptability • Methodical • Inquisitive • Persistent • Growth mindset • Collaboration • Leadership • Empathy • Self-directed • Multi-tasking • Communication • Project management • Organization • Analytical thinking</p>
             </div>
         </div>
-        </section>
+    </section>
+    <section class="toolsSection">
         <div id="toolsTitleContainer">
             <h2 class="skillsHeader">Tools</h2>
         </div>
@@ -95,9 +101,9 @@
                 <p class="skillsDescription">HTML • CSS • JavaScript • GitHub • jQuery • Bootstrap</p>
             </div>
         </div>
-       
+    </section> 
 
-    </section>
+   
 
     <footer>
         <div class="footerContainer">
