--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 
     <footer>
         <div class="footerContainer">
-        <a href="linkedin.com/in/ross-enger/" class="linkedIn">
+        <a href="https://www.linkedin.com/in/ross-enger/" class="linkedIn">
             <img src="images/linkedin_logo_png.png" class="linkedInLogo">
         </a>
         <p class="email">rossenger@gmail.com</p>
