--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="logo fadeIn1"><img src="images/logo-01.png"></div>
         </div>
 
-        <div class="menu-wrap fadeIn4">
+        <div class="menu-wrap fadeIn5">
             <input type="checkbox" class="toggler">
             <div class="hamburger"><div></div></div>
             <div class="menu">
@@ -74,43 +74,59 @@
     <section class="projectSection">
     <div class="projectGridContainer">
         <div class="npoCard load-hidden">
-            <img src="./images/npo_homepage_images.png" class="npoImages">
-            <div class="projectCardContainer">
-                <h2 class ="projectCardHeader">White Bear Area Food Shelf Website Redesign</h2>
-            </div>
-            <P class="projectCardSubhead">UI Case Study</P>
-            <button class="projectButton">View Project</button>
+            <a href="#" style="text-decoration: none">
+                <div class="grow">
+                <img src="./images/npo_homepage_images.png" class="npoImages">
+                <div class="projectCardContainer">
+                    <h2 class ="projectCardHeader">White Bear Area Food Shelf Website Redesign</h2>
+                </div>
+                <P class="projectCardSubhead">UI Case Study</P>
+                <button class="projectButton">View Project</button>
+                </div>
+            </a>
         </div>
         <div class="blmCard load-hidden">
-            <img src="./images/blm_homepage_images.png" class="blmImages">
-            <div class="projectCardContainer">
-                <h2 class ="projectCardHeader">Bureau of Land Management Website Redesign</h2>
-            </div>
-            <P class="projectCardSubhead">UI Case Study</P>
-            <button class="projectButton">View Project</button>
+            <a href="#" style="text-decoration: none">
+                <div class="grow">
+                <img src="./images/blm_homepage_images.png" class="blmImages">
+                <div class="projectCardContainer">
+                    <h2 class ="projectCardHeader">Bureau of Land Management Website Redesign</h2>
+                </div>
+                <P class="projectCardSubhead">UI Case Study</P>
+                <button class="projectButton">View Project</button>
+                </div>
+            </a>
         </div>
         <div class="goalAssistantCard load-hidden">
-            <img src="./images/goalassistant_homepage_image.png" class="goalAssistantImage">
-            <div class="projectCardContainer">
-                <h2 class ="projectCardHeader">GoalAssistant Mobile App</h2>
-            </div>
-            <P class="projectCardSubhead">UX Case Study</P>
-            <button class="projectButton">View Project</button>
+            <a href="#" style="text-decoration: none">
+                <div class="grow">
+                <img src="./images/goalassistant_homepage_image.png" class="goalAssistantImage">
+                <div class="projectCardContainer">
+                    <h2 class ="projectCardHeader">GoalAssistant Mobile App</h2>
+                </div>
+                <P class="projectCardSubhead">UX Case Study</P>
+                <button class="projectButton">View Project</button>
+                </div>
+            </a>
         </div>
         <div class="trvlCard load-hidden">
-            <img src="./images/trvl_homepage_image.png" class="trvlImage">
-            <div class="projectCardContainer">
-                <h2 class ="projectCardHeader">Travel Startup Mobile App</h2>
-            </div>
-            <P class="projectCardSubhead">UX Case Study</P>
-            <button class="projectButton">View Project</button>
+            <a href="#" style="text-decoration: none">
+                <div class="grow">
+                <img src="./images/trvl_homepage_image.png" class="trvlImage">
+                <div class="projectCardContainer">
+                    <h2 class ="projectCardHeader">Travel Startup Mobile App</h2>
+                </div>
+                <P class="projectCardSubhead">UX Case Study</P>
+                <button class="projectButton">View Project</button>
+                </div>
+            </a>
         </div>
     </div>
     </section>
 
     <footer>
         <div class="footerContainer">
-        <a href="www.linkedin.com/in/ross-enger" class="linkedIn">
+        <a href="https://www.linkedin.com/in/ross-enger" class="linkedIn">
             <img src="images/linkedin_logo_png.png" class="linkedInLogo">
         </a>
         <p class="email">rossenger@gmail.com</p>
