--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     </head>
     <body>
 
+    <!--
+
+    <div class="loaderAnimationContainer fadeOut">
+        <div class="loaderBackground">
+            <div class="fadeIn">
+                <img src="images/logo_animation.svg">
+            </div>
+        </div>
+    </div>  
+
+    -->
+    
     <div>
         <header>
         <div class="logoContainer">
