--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script>
             ScrollReveal({ reset: true });
         </script>
+        <script>
+            ScrollReveal.debug = true;
+        </script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
         <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
