--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="index.html">work</a></li>
+                        <li><a href="index2.html">work</a></li>
                         <li><a href="about.html"><span class="menuActive">about</span></a></li>
                         <li><a href="resume.html">résumé</a></li>
                         <li><a href="contact.html">contact</a></li>
@@ -39,7 +39,7 @@
     </div>
     <div class="navbarContainer">
         <div class="navbar">
-            <a href="index.html">work</a>
+            <a href="index2.html">work</a>
             <a href="#" class="activeNav">about</a>
             <a href="#">résumé</a>
             <a href="#">contact</a>
@@ -59,7 +59,7 @@
                 <p>Design serves as a practical way to channel the creative process, however I also love creating art. As a hobby, I enjoy applying my interest in geometry to creating 3D wall art and have creative goals centered around using CAD and generative processing techniques while leveraging the precision of 3D printing and CNC routers to design and build lights. I have recently begun working with wood and LED lights and look forward to working with more materials such as resin, metal, ceramic, and concrete.</p>
             </div>
         </div>
-        <div id="graphicDesignPortfolioContainer" class="fadeIn2">
+        <div id="graphicDesignPortfolioContainer">
             <a href="https://rossenger.myportfolio.com/" id ="portfolioLink"><button id="graphicDesignPortfolio">View Graphic Design Portfolio</button></a>
         </div>
     </section>
