--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>  
 
-   
+    <div class="fullHeight">
     
     <div>
         <header>
@@ -83,6 +83,8 @@
         <img src="./images/down_arrow.png" class="downArrow bounce fadeIn4">
     </div>
     </section>
+
+    </div>
 
     <!-- My Work Section Constructed using CSS Grid -->
 
