--- a/index2.html
+++ b/index2.html
@@ -29,6 +29,8 @@
     </div>  
 
     -->
+
+    <div class="fullHeight">
     
     <div>
         <header>
@@ -83,6 +85,8 @@
         <img src="./images/down_arrow.png" class="downArrow bounce fadeIn4">
     </div>
     </section>
+
+    </div>
 
     <!-- My Work Section Constructed using CSS Grid -->
 
