--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
         </script>
         <link rel="stylesheet" type="text/css" href="css/style2.css" />
         <title>Ross Enger Design Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
     </head>
     <body>
@@ -45,7 +45,7 @@
                 <div>
                     <div>
                         <ul>
-                            <li><a href="index.html"><span class="menuActive">work</span></a></li>
+                            <li><a href="index2.html"><span class="menuActive">work</span></a></li>
                             <li><a href="about.html">about</a></li>
                             <li><a href="resume.html">résumé</a></li>
                             <li><a href="contact.html">contact</a></li>
@@ -57,7 +57,7 @@
 
         <div class="navbarContainer">
             <div class="navbar">
-                <a href="#" class="activeNav fadeIn2">work</a>
+                <a href="index2.html" class="activeNav fadeIn2">work</a>
                 <a href="about.html" class="fadeIn2">about</a>
                 <a href="#" class="fadeIn2">résumé</a>
                 <a href="#" class="fadeIn2">contact</a>
@@ -93,7 +93,7 @@
     <section class="projectSection">
     <div class="projectGridContainer">
         <div class="npoCard load-hidden">
-            <a href="#" style="text-decoration: none">
+            <a href="../UX_UI_HW_20/npo.html" style="text-decoration: none">
                 <div class="grow">
                 <img src="./images/npo_homepage_images.png" class="npoImages">
                 <div class="projectCardContainer">
