--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         </script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Ross Enger Design Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
