--- a/index3.html
+++ b/index3.html
@@ -11,144 +11,40 @@
         <script>
             ScrollReveal.debug = true;
         </script>
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style2.css" />
         <title>Ross Enger Design Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="/UX_UI_HW_19/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="images/favicon.png">
         <link rel="stylesheet" href="https://use.typekit.net/oqf7lfy.css">
     </head>
-    <body>
 
-    <!--
+<body>
 
-    <div class="loaderAnimationContainer fadeOut">
-        <div class="loaderBackground">
-            <div class="fadeIn">
-                <img src="images/logo_animation.svg">
-            </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="projectSummary col-lg-8 col-md-8 col-sm-12">
+            <h2>Project Summary</h2>
+            <p>As part of our UX/UI design boot camp, our team was tasked with redesigning a non-profit organization's website. We were given 3 weeks to complete this design challenge.</p>
+            <p>Our team selected the White Bear Area Food Shelf website to redesign, and our goal was to improve its usability and informational hierarchy to better serve the mission of eliminating food insecurity in the White Bear area.</p>
+            <p>After creating a responsive website redesign for the White Bear Area Food shelf, we presented our design process to our boot camp cohort and supported our findings and final prototypes with the following deliverables: proto-persona, UX research interview plan, Google Survey findings, brainstorming and feature prioritization matrix, user scenario, journey map, heuristic evaluation, user flow, low fidelity wireframes and prototypes, usability testing plan and findings, style guide, medium-fidelity wireframes and prototypes, style guide, and high-fidelity prototypes.</p>
         </div>
-    </div>  
-
-    -->
-    
-    <div>
-        <header>
-        <div class="logoContainer">
-            <div class="logo fadeIn1"><img src="images/logo-01.png"></div>
-        </div>
-
-        <div class="menu-wrap fadeIn5">
-            <input type="checkbox" class="toggler">
-            <div class="hamburger"><div></div></div>
-            <div class="menu">
-                <div>
-                    <div>
-                        <ul>
-                            <li><a href="index.html"><span class="menuActive">work</span></a></li>
-                            <li><a href="about.html">about</a></li>
-                            <li><a href="resume.html">résumé</a></li>
-                            <li><a href="contact.html">contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="navbarContainer">
-            <div class="navbar">
-                <a href="#" class="activeNav fadeIn2">work</a>
-                <a href="about.html" class="fadeIn2">about</a>
-                <a href="#" class="fadeIn2">résumé</a>
-                <a href="#" class="fadeIn2">contact</a>
-            </div>
-        </div> 
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
-        </header>
-    </div>
-
-
-
-    <section class="heroSection">
-    <div class="heroContainer fadeIn3"> 
-        <div class="titleDescription"> 
-        <div class="fadeIn4">    
-            <img src="./images/hero_titles.png" class="heroTitles">
-         
-            <div class="heroDescriptionContainer">
-                <h2 class="heroDescription">Crafting <span class="italicBold">intuitive, visually stunning, </span>and <span class="italicBold">user-centered </span>digital experiences.</span></h2>
-            </div>
-         </div>
-        </div>
-        <img src="./images/down_arrow.png" class="downArrow bounce fadeIn4">
-    </div>
-    </section>
-
-    <!-- My Work Section Constructed using CSS Grid -->
-
-    <section class="projectSection">
-    <div class="projectGridContainer">
-        <div class="npoCard load-hidden">
-            <a href="#" style="text-decoration: none">
-                <div class="grow">
-                <img src="./images/npo_homepage_images.png" class="npoImages">
-                <div class="projectCardContainer">
-                    <h2 class ="projectCardHeader">White Bear Area Food Shelf Website Redesign</h2>
-                </div>
-                <P class="projectCardSubhead">UI Case Study</P>
-                <button class="projectButton">View Project</button>
-                </div>
-            </a>
-        </div>
-        <div class="blmCard load-hidden">
-            <a href="#" style="text-decoration: none">
-                <div class="grow">
-                <img src="./images/blm_homepage_images.png" class="blmImages">
-                <div class="projectCardContainer">
-                    <h2 class ="projectCardHeader">Bureau of Land Management Website Redesign</h2>
-                </div>
-                <P class="projectCardSubhead">UI Case Study</P>
-                <button class="projectButton">View Project</button>
-                </div>
-            </a>
-        </div>
-        <div class="goalAssistantCard load-hidden">
-            <a href="#" style="text-decoration: none">
-                <div class="grow">
-                <img src="./images/goalassistant_homepage_image.png" class="goalAssistantImage">
-                <div class="projectCardContainer">
-                    <h2 class ="projectCardHeader">GoalAssistant Mobile App</h2>
-                </div>
-                <P class="projectCardSubhead">UX Case Study</P>
-                <button class="projectButton">View Project</button>
-                </div>
-            </a>
-        </div>
-        <div class="trvlCard load-hidden">
-            <a href="#" style="text-decoration: none">
-                <div class="grow">
-                <img src="./images/trvl_homepage_image.png" class="trvlImage">
-                <div class="projectCardContainer">
-                    <h2 class ="projectCardHeader">Travel Startup Mobile App</h2>
-                </div>
-                <P class="projectCardSubhead">UX Case Study</P>
-                <button class="projectButton">View Project</button>
-                </div>
-            </a>
+        <div class="projectSummary2 col-lg-4 col-md-4 col-sm-12">
+            <h2>Project Summary</h2>
+            <p>As part of our UX/UI design boot camp, our team was tasked with redesigning a non-profit organization's website. We were given 3 weeks to complete this design challenge.</p>
+            <p>Our team selected the White Bear Area Food Shelf website to redesign, and our goal was to improve its usability and informational hierarchy to better serve the mission of eliminating food insecurity in the White Bear area.</p>
+            <p>After creating a responsive website redesign for the White Bear Area Food shelf, we presented our design process to our boot camp cohort and supported our findings and final prototypes with the following deliverables: proto-persona, UX research interview plan, Google Survey findings, brainstorming and feature prioritization matrix, user scenario, journey map, heuristic evaluation, user flow, low fidelity wireframes and prototypes, usability testing plan and findings, style guide, medium-fidelity wireframes and prototypes, style guide, and high-fidelity prototypes.</p>
         </div>
     </div>
-    </section>
+    <div class="row">
+        <div class="problem col-lg-6 col-md-6 col-sm-12"></div>
+        <div class="solution col-lg-6 col-md-6 col-sm-12"></div>
+    </div>
+</div>
 
-    <footer>
-        <div class="footerContainer">
-        <a href="https://www.linkedin.com/in/ross-enger" class="linkedIn">
-            <img src="images/linkedin_logo_png.png" class="linkedInLogo">
-        </a>
-        <p class="email">rossenger@gmail.com</p>
-        <p class="minneapolis">Minneapolis, MN</p>
-        </div>
-        <p class="copyright">Copyright © 2023 - Ross Enger - All Rights Reserved</p>
-    </footer>
-   <script src="js/index.js"></script>   
+ <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
