--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section class="projectSection">
     <div class="projectGridContainer">
         <div class="npoCard load-hidden">
-            <a href="/UX_UI_HW_20/npo.html" style="text-decoration: none">
+            <a href="/UX_UI_HW_20/index.html" style="text-decoration: none">
                 <div class="grow">
                 <img src="./images/npo_homepage_images.png" class="npoImages">
                 <div class="projectCardContainer">
